--- a/.github/workflows/docker-build-and-push.yml
+++ b/.github/workflows/docker-build-and-push.yml
@@ -29,4 +29,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: jammsen/sons-of-the-forest-dedicated-server:latest
+          tags: ohotnik/sotf-ds:latest
