--- a/dedicatedserver.cfg.example
+++ b/dedicatedserver.cfg.example
@@ -3,9 +3,9 @@
   "GamePort": 8766,
   "QueryPort": 27016,
   "BlobSyncPort": 9700,
-  "ServerName": "jammsen-docker-generated-###RANDOM###",
+  "ServerName": "X5 Crew Server",
   "MaxPlayers": 8,
-  "Password": "",
+  "Password": "gravitee",
   "LanOnly": false,
   "SaveSlot": 1,
   "SaveMode": "Continue",
